syntax = "proto3";

option java_package = "com.phonereplay.tasklogger";

// Definição da mensagem TimeLine
message TimeLine {
  string coordinates = 1;
  string gestureType = 2;
  string targetTime = 3;
}

// Atualização da mensagem BinaryDataRequest para incluir a lista de TimeLine
message BinaryDataRequest {
  bytes binaryData = 1;
  string sessionId = 2;
  repeated TimeLine timeLines = 3; // Lista de TimeLine substituindo LocalGesture
}

message BinaryDataResponse {
  // Adicione quaisquer outros campos de resposta conforme necessário
}

service BinaryDataService {
  rpc sendBinaryData(BinaryDataRequest) returns (BinaryDataResponse);
}
